# visual-attention-intervention

./: README.md  app.py  pyproject.toml  requirements.txt
scripts/: evaluating_paligemma2.py  evaluating_paligemma2_adapt_vis.py  evaluating_paligemma2_clvs.py  evaluating_paligemma2_vea.py  evaluating_qwen3vl.py  evaluating_qwen3vl_adapt_vis.py  evaluating_qwen3vl_clvs.py  evaluating_qwen3vl_vea.py  finetuning_paligemma2.py  finetuning_paligemma2_jetstream.py  finetuning_qwen3vl.py  finetuning_qwen3vl_jetstream.py
src/visual_attention_intervention/: base.py  modeling_qwen3_vl.py  utils.py  vsr_dataset.py
