[project]
name = "visual-attention-intervention"
version = "0.1.0"
description = ""
authors = [
    {name = "David Chang",email = "changdavidb@gmail.com"}
]
requires-python = ">=3.12,<3.15"
dependencies = [
    "transformers (>=4.57.6,<5.0.0)",
    "matplotlib (>=3.10.7,<4.0.0)",
    "numpy (>=2,<2.3.0)",
    "torch (>=2.9.0,<3.0.0)",
    "peft (>=0.17.1,<0.18.0)",
    "torchvision (>=0.24.0,<0.25.0)",
    "aim (>=3.29.1,<4.0.0)",
    "scikit-learn (>=1.8.0,<2.0.0)",
    "opencv-python (>=4.12.0.88,<5.0.0.0)",
    "pycocotools (>=2.0.11,<3.0.0)",
    "pycoco (>=0.7.2,<0.8.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
